--- a/css/main.css
+++ b/css/main.css
@@ -53,3 +53,12 @@
 .push-right{
 	float: right;
 }
+/*--------------------------------------------------------------
+6.0 - media queries
+-------------------------------------------------------------- */
+@media screen and (min-width: 480px){
+	
+}
+@media screen and (max-width: 480px){
+	
+}
