--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,7 @@
 	1.3 - Buttons
 	1.4 - Forms
 	1.5 - Lists
-	1.6 - Tables
+	1.6 - accordion
 2.0 - Navigation Menus
 	3.1 - Main Menu
 	3.2 - Sub Menu
@@ -37,39 +37,75 @@
 	-ms-box-sizing: border-box;
 	box-sizing: border-box;
 }
+*{
+	font-family: open sans, sans-serif;
+}
 /*--------------------------------------------------------------
 1.0 - Typography
 -------------------------------------------------------------- */
 html{
 	font-size: 14px;
 }
-/* 1.1 headings */
+/* 1.2 - body copy */
+
+.col-1-5 p:first-child{
+	font-weight: 900;
+	margin-bottom: 8px;
+}
+.col-1-5 p:last-child{
+	font-weight: 200;
+}
+/* 1.3 - Buttons */
+#btn, nav ul li a{
+	text-decoration: none;
+}
+#btn{
+	text-transform: uppercase;
+}
+#btn:hover{
+	border: 4px solid #7cc242;
+}
+
 /*--------------------------------------------------------------
 2.0 - Navigation Menus
 -------------------------------------------------------------- */
 nav ul li{
 	display: inline-block;
-	padding: 10px;
-}
-nav ul li a{
-	text-decoration: none;
-	color: #000;
 }
 
 /*--------------------------------------------------------------
 3.0 - Content
 -------------------------------------------------------------- */
-.col-1-5{
+.col-1-5, .col-1-5 p, form{
 	margin: 0 auto;
 }
-.fa-facebook-f, .fa-instagram, .fa-twitter{
+.fa-facebook-f, .fa-instagram, .fa-twitter, nav ul li, #btn{
 	padding: 10px;
+}
+.col-1-5 p:first-child, .col-1-5 p:last-child{
+	width: 45%;
+}
+#services, #aboutus, #chooseus, #contact{
+	padding-top: 20px;
+}
+#services{
+	padding-bottom: 40px;
+}
+form{
+	display: block;
+	width: 60%;
+}
+.fa-clipboard-check, .fa-clipboard-list, .fa-globe, .fa-handshake, .fa-lock, .fa-sun{
+	padding-left: 185px;
 }
 /*--------------------------------------------------------------
 4.0 - media
 -------------------------------------------------------------- */
 #bg-image{
-	background: url(../img/bg-images.jpg) no-repeat; 
+	background: url(../img/bg-image.jpg) no-repeat;
+	background-color: rgba(0,0,0,0.48);
+	height: 400px;
+	padding-top: 145px;
 }
 
 /*--------------------------------------------------------------
@@ -78,24 +114,24 @@ nav ul li a{
 /* 5.1 background colors */
 footer{
 	background-color: #000;
-	padding-bottom: 100px;
+	padding-bottom: 10px;
 	
 }
-.bg-green{
+.bg-green, #btn{
 	background-color: #7cc242;
 }
 /* 5.2 text-colors */
-.fa-facebook-f, .fa-twitter, .fa-instagram, footer, .bg-green{
+.fa-facebook-f, .fa-twitter, .fa-instagram, footer, .bg-green, .col-1-5 p, #btn, nav ul li a{
 	color: #fff;
 }
 .fa-facebook-f:hover, .fa-twitter:hover, .fa-instagram:hover{
 	color: #7cc242;
 }
 /* 5.3 font sizes */
-h1{
+h1, .col-1-5 p:last-child{
 	font-size: 1rem;
 }
-.fa-clipboard-check, .fa-clipboard-list, .fa-globe, .fa-handshake, .fa-lock, .fa-sun, .fa-facebook-f, .fa-instagram, .fa-twitter{
+.fa-clipboard-check, .fa-clipboard-list, .fa-globe, .fa-handshake, .fa-lock, .fa-sun, .fa-facebook-f, .fa-instagram, .fa-twitter, .col-1-5 p:first-child{
 	font-size: 2rem;
 }
 /* 5.4 alignments */
@@ -105,25 +141,45 @@ h1{
 h2, h3, p, h4, .fa-clipboard-check, .fa-clipboard-list, .fa-globe, .fa-handshake, .fa-lock, .fa-sun{
 	text-align: center;
 }
-footer h3{
+footer h3, form p{
 	text-align: left;
 }
+
 /*--------------------------------------------------------------
 6.0 - media queries
 -------------------------------------------------------------- */
 @media screen and (min-width: 480px){
-	.wrapper{
+	.wrapper, .col-1-5 p:first-child, .col-1-5 p:last-child{
 		width: 95%;
 	}
 	.fa-facebook-f, .fa-instagram, .fa-twitter{
 		text-align: center;
 	}
+	.accordion-toggle {
+		cursor: pointer;
+	}
+  .accordion-content {
+	  display: none;
+	}
+  .accordion-content.default {
+	  display: block;
+	}
 }
 @media screen and (max-width: 480px){
-	.wrapper, .col-1-3, .col-1-2, .col-1-4, .col-1-5{
+	.wrapper, .col-1-3, .col-1-2, .col-1-4, .col-1-5, .col-1-5 p:first-child, .col-1-5 p:last-child{
 		width: 100%;
 	}
 	footer h3, h4, .fa-facebook-f, .fa-instagram, .fa-twitter{
 		text-align: center;
 	}
+	.accordion-toggle {
+		cursor: pointer;
+	}
+  .accordion-content {
+	  display: none;
+	}
+  .accordion-content.default {
+	  display: block;
+	}
+	
 }
